--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .nav-dropdown-link-line {
   width: 16px;
   height: 2px;
-  background-color: #ff4d24;
+  background-color: white;
   margin-right: 15px;
 }
