--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
 }
 
 .service-background {
-  background-image: linear-gradient(to right, rgba(62, 7, 7, 0.5), transparent),
+  background-image:
+    linear-gradient(to right, rgba(62, 7, 7, 0.5), transparent),
     url("https://images.unsplash.com/photo-1589487391730-58f20eb2c308?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Zm9vdGJhbGx8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=800&q=60");
   background-size: cover;
   background-position: center;
